--- a/App.config
+++ b/App.config
@@ -3,6 +3,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="InteractiveMap.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="InteractiveMap.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
@@ -27,4 +33,24 @@
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
+  <applicationSettings>
+    <InteractiveMap.Properties.Settings>
+      <setting name="ConnectionString" serializeAs="String">
+        <value>Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=InteractiveMapDb;Integrated Security=True;</value>
+      </setting>
+    </InteractiveMap.Properties.Settings>
+  </applicationSettings>
+  <userSettings>
+    <InteractiveMap.Properties.Settings>
+      <setting name="Zoom" serializeAs="String">
+        <value>4</value>
+      </setting>
+      <setting name="Latitude" serializeAs="String">
+        <value>66.4169575018027</value>
+      </setting>
+      <setting name="Longitude" serializeAs="String">
+        <value>94.250257522156943</value>
+      </setting>
+    </InteractiveMap.Properties.Settings>
+  </userSettings>
 </configuration>
