--- a/InteractiveMap.csproj
+++ b/InteractiveMap.csproj
@@ -82,6 +82,9 @@
   <ItemGroup>
     <Compile Include="BusinessLogicLayer\IMarkerController.cs" />
     <Compile Include="BusinessLogicLayer\GoogleMarkerController.cs" />
+    <Compile Include="DataAccessLayer\DatabaseAccess.cs" />
+    <Compile Include="DataAccessLayer\MapState.cs" />
+    <Compile Include="DataAccessLayer\MarkerInfo.cs" />
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,7 +120,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="DataAccessLayer\" />
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="CreateDatabase.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
